--- a/blog.html
+++ b/blog.html
@@ -35,6 +35,77 @@
             <p>Read all case studies about our products!</p>
         </section>
 
+        <section id="blog">
+            <!--blog 1-->
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="img/blog/b1.jpg" alt="">
+                </div>
+                <div class="blog-details">
+                    <h4>The Cotton-Jersey Zip-Up Hoddie</h4>
+                    <p>Classic comfort. Our Cotton-Jersey Zip-Up Hoodie is your go-to layer for everyday ease. 
+                        Soft, breathable, and perfectly versatile.</p>
+                        <a href="#">CONTINUE READING</a>
+                </div>
+                <h1>13/01</h1>
+            </div>
+
+            <!--blog 2-->
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="img/blog/b2.jpg" alt="">
+                </div>
+                <div class="blog-details">
+                    <h4>How to Style a Quiff</h4>
+                    <p>Classic comfort. Our Cotton-Jersey Zip-Up Hoodie is your go-to layer for everyday ease. 
+                        Soft, breathable, and perfectly versatile.</p>
+                        <a href="#">CONTINUE READING</a>
+                </div>
+                <h1>13/01</h1>
+            </div>
+
+            <!--blog 3-->
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="img/blog/b3.jpg" alt="">
+                </div>
+                <div class="blog-details">
+                    <h4>Must Have Skater Girl items</h4>
+                    <p>Classic comfort. Our Cotton-Jersey Zip-Up Hoodie is your go-to layer for everyday ease. 
+                        Soft, breathable, and perfectly versatile.</p>
+                        <a href="#">CONTINUE READING</a>
+                </div>
+                <h1>13/01</h1>
+            </div>
+
+            <!--blog 4-->
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="img/blog/b4.jpg" alt="">
+                </div>
+                <div class="blog-details">
+                    <h4>Runway-Inspired Trends</h4>
+                    <p>Classic comfort. Our Cotton-Jersey Zip-Up Hoodie is your go-to layer for everyday ease. 
+                        Soft, breathable, and perfectly versatile.</p>
+                        <a href="#">CONTINUE READING</a>
+                </div>
+                <h1>13/01</h1>
+            </div>
+
+            <!--blog 5-->
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="img/blog/b5.jpg" alt="">
+                </div>
+                <div class="blog-details">
+                    <h4>Aw2O Menswear Trends</h4>
+                    <p>Classic comfort. Our Cotton-Jersey Zip-Up Hoodie is your go-to layer for everyday ease. 
+                        Soft, breathable, and perfectly versatile.</p>
+                        <a href="#">CONTINUE READING</a>
+                </div>
+                <h1>13/01</h1>
+            </div>
+        </section>
         <section id="pagination" class="section-p1">
             <a href="#">1</a>
             <a href="#">2</a>
